kubernetes/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: charre
  labels:
    zhaw-module: mlops
