kubernetes/deployment_feedback.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: feedback
  namespace: charre
  labels:
    component: feedback
    app: charre
spec:
  replicas: 1
  selector:
    matchLabels:
      component: feedback
      app: charre
  template:
    metadata:
      labels:
        component: feedback
        app: charre
    spec:
      containers:
        - name: app
          image: ghcr.io/symlons/charre/feedback:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: feedback/liveness
              port: 5000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: feedback/readiness
              port: 5000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
