kubernetes/statefulset_mongodb.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  serviceName: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: mongodb
          image: mongodb:7.0.20
          imagePullPolicy: Always
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-volume
              mountPath: /data/db
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "mongod --shutdown"]
      
      volumes:
        - name: mongodb-volume
          persistentVolumeClaim:
            claimName: mongodb-volume
