kubernetes/service_app.yaml
kind: Service
apiVersion: v1
metadata:
  name: app
  namespace: charre
  labels:
    component: app
    app: charre
spec:
  ports:
    - name: http
      port: 8501
      targetPort: 8501
  selector:
    component: app
    app: charre
