kubernetes/service_mongodb.yaml
kind: Service
apiVersion: v1
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  ports:
    - name: mongodb
      port: 27017
      targetPort: 27017
  selector:
    app: mongodb
